Wrap detector processing step.

--- a/docs/user-guide/workflow_chunk.ipynb
+++ b/docs/user-guide/workflow_chunk.ipynb
@@ -62,7 +62,7 @@
    "source": [
     "from functools import partial\n",
     "from ess.reduce.streaming import StreamProcessor\n",
-    "from ess.nmx.streaming import MaxAccumulator, MinAccumulator\n",
+    "from ess.reduce.streaming import MaxAccumulator, MinAccumulator\n",
     "\n",
     "# Stream processor building helper\n",
     "scalefactor_stream_processor = partial(\n",
@@ -157,31 +157,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from ess.nmx.nexus import export_metadata_as_nxlauetof\n",
-    "\n",
-    "output_file = \"test.h5\"\n",
-    "experiment_metadata = wf.compute(NMXExperimentMetadata)\n",
-    "detector_metas = []\n",
-    "for detector_i in range(3):\n",
-    "    temp_wf = wf.copy()\n",
-    "    temp_wf[DetectorIndex] = detector_i\n",
-    "    detector_metas.append(temp_wf.compute(NMXDetectorMetadata))\n",
-    "\n",
-    "export_metadata_as_nxlauetof(\n",
-    "    *detector_metas,\n",
-    "    experiment_metadata=experiment_metadata,\n",
-    "    output_file=output_file,\n",
-    "    # Arbitrary metadata falls into ``entry`` group as a variable.\n",
-    "    mcstas_weight2count_scale_factor=scale_factor,\n",
-    ")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -220,15 +195,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from functools import partial\n",
-    "from ess.reduce.streaming import StreamProcessor, EternalAccumulator\n",
+    "from ess.nmx.nexus import NXLauetofWriter\n",
     "\n",
-    "# Stream processor building helper\n",
-    "final_stream_processor = partial(\n",
-    "    StreamProcessor,\n",
-    "    dynamic_keys=(RawEventProbability,),\n",
-    "    target_keys=(NMXReducedDataGroup,),\n",
-    "    accumulators={NMXReducedCounts: EternalAccumulator},\n",
+    "\n",
+    "def temp_generator(file_path, detector_name):\n",
+    "    max_chunk_id = calculate_number_of_chunks(\n",
+    "        file_path, detector_name=detector_name, chunk_size=CHUNK_SIZE\n",
+    "    )\n",
+    "    cur_detector_progress_bar = IntProgress(\n",
+    "        min=0, max=max_chunk_id, description=f\"Detector {detector_i}\"\n",
+    "    )\n",
+    "    display(cur_detector_progress_bar)\n",
+    "    for da in raw_event_data_chunk_generator(\n",
+    "        file_path=file_path, detector_name=detector_name, chunk_size=CHUNK_SIZE\n",
+    "    ):\n",
+    "        yield da\n",
+    "        cur_detector_progress_bar.value += 1\n",
+    "\n",
+    "\n",
+    "# When a panel is added to the writer,\n",
+    "# the writer will start processing the data from the generator\n",
+    "# and store the results in memory\n",
+    "# The writer will then write the data to the file\n",
+    "# when ``save`` is called\n",
+    "writer = NXLauetofWriter(\n",
+    "    chunk_generator=temp_generator,\n",
+    "    chunk_insert_key=RawEventProbability,\n",
+    "    workflow=final_wf,\n",
+    "    output_filename=\"test.h5\",\n",
+    "    overwrite=True,\n",
+    "    extra_meta={\"McStasWeight2CountScaleFactor\": scale_factor},\n",
     ")"
    ]
   },
@@ -238,52 +234,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ess.nmx.types import DetectorName\n",
-    "from ess.nmx.mcstas.load import raw_event_data_chunk_generator\n",
-    "from ess.nmx.streaming import calculate_number_of_chunks\n",
-    "from ipywidgets import IntProgress\n",
-    "from ess.nmx.nexus import export_reduced_data_as_nxlauetof\n",
-    "\n",
-    "CHUNK_SIZE = 10  # Number of event rows to process at once\n",
-    "# Increase this number to speed up the processing\n",
-    "NUM_DETECTORS = 3\n",
-    "final_wf[TimeBinSteps] = sc.linspace(\n",
-    "    't', 0.1, 0.15, 51, unit='s'\n",
-    ")  # Time bin edges can be calculated from the data\n",
-    "# But streaming processor only sees the first chunk\n",
-    "# So we need to set it manually before processing the first chunk\n",
-    "# It is a bit cumbersome since we have to know the range of the time bins in advance\n",
-    "\n",
-    "# Loop over the detectors\n",
-    "file_path = final_wf.compute(FilePath)\n",
-    "for detector_i in range(0, NUM_DETECTORS):\n",
-    "    temp_wf = final_wf.copy()\n",
-    "    temp_wf[DetectorIndex] = detector_i\n",
-    "    # First compute static information\n",
-    "    detector_name = temp_wf.compute(DetectorName)\n",
-    "    temp_wf[PixelIds] = temp_wf.compute(PixelIds)\n",
-    "    max_chunk_id = calculate_number_of_chunks(\n",
-    "        file_path, detector_name=detector_name, chunk_size=CHUNK_SIZE\n",
-    "    )\n",
-    "    cur_detector_progress_bar = IntProgress(\n",
-    "        min=0, max=max_chunk_id, description=f\"Detector {detector_i}\"\n",
-    "    )\n",
-    "    display(cur_detector_progress_bar)\n",
-    "\n",
-    "    # Build the stream processor\n",
-    "    processor = final_stream_processor(temp_wf)\n",
-    "    for da in raw_event_data_chunk_generator(\n",
-    "        file_path=file_path, detector_name=detector_name, chunk_size=CHUNK_SIZE\n",
-    "    ):\n",
-    "        if any(da.sizes.values()) == 0:\n",
-    "            continue\n",
-    "        else:\n",
-    "            results = processor.add_chunk({RawEventProbability: da})\n",
-    "        cur_detector_progress_bar.value += 1\n",
-    "\n",
-    "    result = results[NMXReducedDataGroup]\n",
-    "    display(result)\n",
-    "    export_reduced_data_as_nxlauetof(result, output_file=output_file)\n"
+    "for detector_i in range(3):\n",
+    "    display(writer.add_panel(detector_id=detector_i))"
    ]
   }
  ],
@@ -303,7 +255,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
