--- a/docs/user-guide/workflow_chunk.ipynb
+++ b/docs/user-guide/workflow_chunk.ipynb
@@ -61,8 +61,7 @@
    "outputs": [],
    "source": [
     "from functools import partial\n",
-    "from ess.reduce.streaming import StreamProcessor\n",
-    "from ess.nmx.streaming import MaxAccumulator, MinAccumulator\n",
+    "from ess.reduce.streaming import StreamProcessor, MaxAccumulator, MinAccumulator\n",
     "\n",
     "# Stream processor building helper\n",
     "scalefactor_stream_processor = partial(\n",
@@ -263,7 +262,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
