NXLauetof format and workflow/IO helpers.
* Lauetof export interface.

* Raw data metadata as dataclass

* Allow arbitrary metadata and export time of flight from the coordinate.

* Specify unit

Co-authored-by: Simon Heybrock <12912489+SimonHeybrock@users.noreply.github.com>

* Add docstring to export methods.

* Add missing attributes.

* Remove comments

* Write unit only when applicable.

* Update comment.

* Validity check when appending histogram on top of metadata  (#116)

* Separate metatadata from event data for easy export.

* Add raw data metadata retrieval part.

* Lauetof export interface.

* Raw data metadata as dataclass

* Allow arbitrary metadata and export time of flight from the coordinate.

* Separate metatadata from event data for easy export.

* Add raw data metadata retrieval part.

* Satety check in the export function.

* Add warning filter.

* Apply automatic formatting

* Apply automatic formatting

* Fix typo

* Move functions to more proper module.

* Lauetof export interface.

* Raw data metadata as dataclass

* Allow arbitrary metadata and export time of flight from the coordinate.

* Specify unit

Co-authored-by: Simon Heybrock <12912489+SimonHeybrock@users.noreply.github.com>

* Add docstring to export methods.

* Add missing attributes.

* Remove comments

* Fix typo.

* Apply automatic formatting

---------

Co-authored-by: pre-commit-ci-lite[bot] <117423508+pre-commit-ci-lite[bot]@users.noreply.github.com>
Co-authored-by: Simon Heybrock <12912489+SimonHeybrock@users.noreply.github.com>

* Wrap detector processing step.

* Lower pin of essreduce to use accumulators.

* Specify dtype of string. [skip ci]

* Use essreduce accumulator.

* Export NXsource.

* Fix type hint

* Apply automatic formatting

* Data reduction wrapper interface  (#122)

* Executable module.

* Save crystal rotation.

* Fix crystal rotation.

* Remove all zero lines, not just the first one (#123)

* remove all zero lines, not just the first one

* Apply automa

--- a/docs/user-guide/workflow_chunk.ipynb
+++ b/docs/user-guide/workflow_chunk.ipynb
@@ -134,9 +134,9 @@
     "    raw_data_metadatas[detector_i] = results[NMXRawDataMetadata]\n",
     "\n",
     "# We take the min/maximum values of the scale factor\n",
-    "min_toa = min(dg['min_toa'] for dg in raw_data_metadatas.values())\n",
-    "max_toa = max(dg['max_toa'] for dg in raw_data_metadatas.values())\n",
-    "max_probability = max(dg['max_probability'] for dg in raw_data_metadatas.values())\n",
+    "min_toa = min(meta.min_toa for meta in raw_data_metadatas.values())\n",
+    "max_toa = max(meta.max_toa for meta in raw_data_metadatas.values())\n",
+    "max_probability = max(meta.max_probability for meta in raw_data_metadatas.values())\n",
     "\n",
     "toa_bin_edges = sc.linspace(dim='t', start=min_toa, stop=max_toa, num=51)\n",
     "scale_factor = mcstas_weight_to_probability_scalefactor(\n",
@@ -148,11 +148,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Compute Metadata\n",
+    "\n",
+    "Other metadata does not require any chunk-based computation.\n",
+    "\n",
+    "Therefore we export the metadata first and append detector data later."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Compute Final Output\n",
     "\n",
-    "Now with the `scale_factor: McStasWeight2CountScaleFactor`, we can compute the final output chunk by chunk.\n",
+    "Now with all the metadata, we can compute the final output chunk by chunk.\n",
     "\n",
-    "We will also compute static parameters in advance so that stream processor does not compute them every time another chunk is added."
+    "We will also compute static parameters in advance so that stream processor does not compute them every time another chunk is added.\n",
+    "\n",
+    "We will as well export the reduced data detector by detector."
    ]
   },
   {
@@ -181,15 +194,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from functools import partial\n",
-    "from ess.reduce.streaming import StreamProcessor, EternalAccumulator\n",
+    "from ess.nmx.nexus import NXLauetofWriter\n",
     "\n",
-    "# Stream processor building helper\n",
-    "final_stream_processor = partial(\n",
-    "    StreamProcessor,\n",
-    "    dynamic_keys=(RawEventProbability,),\n",
-    "    target_keys=(NMXReducedDataGroup,),\n",
-    "    accumulators={NMXReducedCounts: EternalAccumulator},\n",
+    "\n",
+    "def temp_generator(file_path, detector_name):\n",
+    "    max_chunk_id = calculate_number_of_chunks(\n",
+    "        file_path, detector_name=detector_name, chunk_size=CHUNK_SIZE\n",
+    "    )\n",
+    "    cur_detector_progress_bar = IntProgress(\n",
+    "        min=0, max=max_chunk_id, description=f\"Detector {detector_i}\"\n",
+    "    )\n",
+    "    display(cur_detector_progress_bar)\n",
+    "    for da in raw_event_data_chunk_generator(\n",
+    "        file_path=file_path, detector_name=detector_name, chunk_size=CHUNK_SIZE\n",
+    "    ):\n",
+    "        yield da\n",
+    "        cur_detector_progress_bar.value += 1\n",
+    "\n",
+    "\n",
+    "# When a panel is added to the writer,\n",
+    "# the writer will start processing the data from the generator\n",
+    "# and store the results in memory\n",
+    "# The writer will then write the data to the file\n",
+    "# when ``save`` is called\n",
+    "writer = NXLauetofWriter(\n",
+    "    chunk_generator=temp_generator,\n",
+    "    chunk_insert_key=RawEventProbability,\n",
+    "    workflow=final_wf,\n",
+    "    output_filename=\"test.h5\",\n",
+    "    overwrite=True,\n",
+    "    extra_meta={\"McStasWeight2CountScaleFactor\": scale_factor},\n",
     ")"
    ]
   },
@@ -199,50 +233,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ess.nmx.types import DetectorName\n",
-    "from ess.nmx.mcstas.load import raw_event_data_chunk_generator\n",
-    "from ess.nmx.streaming import calculate_number_of_chunks\n",
-    "from ipywidgets import IntProgress\n",
-    "\n",
-    "CHUNK_SIZE = 10  # Number of event rows to process at once\n",
-    "# Increase this number to speed up the processing\n",
-    "NUM_DETECTORS = 3\n",
-    "final_wf[TimeBinSteps] = sc.linspace(\n",
-    "    't', 0.1, 0.15, 51, unit='s'\n",
-    ")  # Time bin edges can be calculated from the data\n",
-    "# But streaming processor only sees the first chunk\n",
-    "# So we need to set it manually before processing the first chunk\n",
-    "# It is a bit cumbersome since we have to know the range of the time bins in advance\n",
-    "\n",
-    "# Loop over the detectors\n",
-    "file_path = final_wf.compute(FilePath)\n",
-    "for detector_i in range(0, NUM_DETECTORS):\n",
-    "    temp_wf = final_wf.copy()\n",
-    "    temp_wf[DetectorIndex] = detector_i\n",
-    "    # First compute static information\n",
-    "    detector_name = temp_wf.compute(DetectorName)\n",
-    "    temp_wf[PixelIds] = temp_wf.compute(PixelIds)\n",
-    "    max_chunk_id = calculate_number_of_chunks(\n",
-    "        file_path, detector_name=detector_name, chunk_size=CHUNK_SIZE\n",
-    "    )\n",
-    "    cur_detector_progress_bar = IntProgress(\n",
-    "        min=0, max=max_chunk_id, description=f\"Detector {detector_i}\"\n",
-    "    )\n",
-    "    display(cur_detector_progress_bar)\n",
-    "\n",
-    "    # Build the stream processor\n",
-    "    processor = final_stream_processor(temp_wf)\n",
-    "    for da in raw_event_data_chunk_generator(\n",
-    "        file_path=file_path, detector_name=detector_name, chunk_size=CHUNK_SIZE\n",
-    "    ):\n",
-    "        if any(da.sizes.values()) == 0:\n",
-    "            continue\n",
-    "        else:\n",
-    "            results = processor.add_chunk({RawEventProbability: da})\n",
-    "        cur_detector_progress_bar.value += 1\n",
-    "\n",
-    "    result = results[NMXReducedDataGroup]\n",
-    "    display(result)\n"
+    "for detector_i in range(3):\n",
+    "    display(writer.add_panel(detector_id=detector_i))"
    ]
   }
  ],
