--- a/docs/user-guide/workflow.ipynb
+++ b/docs/user-guide/workflow.ipynb
@@ -20,7 +20,7 @@
    "outputs": [],
    "source": [
     "from ess.nmx.mcstas import McStasWorkflow\n",
-    "from ess.nmx.data import small_mcstas_3_sample\n",
+    "from ess.nmx.data import get_small_mcstas\n",
     "\n",
     "from ess.nmx.types import *\n",
     "from ess.nmx.reduction import merge_panels\n",
@@ -28,7 +28,7 @@
     "\n",
     "wf = McStasWorkflow()\n",
     "# Replace with the path to your own file\n",
-    "wf[FilePath] = small_mcstas_3_sample()\n",
+    "wf[FilePath] = get_small_mcstas()\n",
     "wf[MaximumCounts] = 10000\n",
     "wf[TimeBinSteps] = 50"
    ]
@@ -170,7 +170,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "scipp",
+   "display_name": "nmx-dev-313",
    "language": "python",
    "name": "python3"
   },
@@ -184,7 +184,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
