--- a/docs/user-guide/workflow_chunk.ipynb
+++ b/docs/user-guide/workflow_chunk.ipynb
@@ -22,12 +22,12 @@
    "outputs": [],
    "source": [
     "from ess.nmx.mcstas import McStasWorkflow\n",
-    "from ess.nmx.data import small_mcstas_3_sample\n",
+    "from ess.nmx.data import get_small_mcstas\n",
     "from ess.nmx.types import *\n",
     "\n",
     "wf = McStasWorkflow()\n",
     "# Replace with the path to your own file\n",
-    "wf[FilePath] = small_mcstas_3_sample()\n",
+    "wf[FilePath] = get_small_mcstas()\n",
     "wf[MaximumCounts] = 10_000\n",
     "wf[TimeBinSteps] = 50\n",
     "wf.visualize(NMXReducedDataGroup, graph_attr={\"rankdir\": \"TD\"}, compact=True)"
