Isolate all mcstas specific modules and helpers.

--- a/docs/user-guide/workflow.ipynb
+++ b/docs/user-guide/workflow.ipynb
@@ -19,14 +19,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ess.nmx.mcstas import McStasWorkflow\n",
+    "from ess.nmx.mcstas import NMXMcStasWorkflow\n",
     "from ess.nmx.data import get_small_mcstas\n",
     "\n",
-    "from ess.nmx.types import *\n",
-    "from ess.nmx.reduction import merge_panels\n",
-    "from ess.nmx.nexus import export_as_nexus\n",
+    "from ess.nmx.mcstas.types import *\n",
+    "from ess.nmx.mcstas.reduction import merge_panels\n",
+    "from ess.nmx.mcstas.nexus import export_as_nexus\n",
     "\n",
-    "wf = McStasWorkflow()\n",
+    "wf = NMXMcStasWorkflow()\n",
     "# Replace with the path to your own file\n",
     "wf[FilePath] = get_small_mcstas()\n",
     "wf[MaximumCounts] = 10000\n",
