--- a/docs/user-guide/workflow_chunk.ipynb
+++ b/docs/user-guide/workflow_chunk.ipynb
@@ -21,11 +21,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ess.nmx.mcstas import McStasWorkflow\n",
+    "from ess.nmx.mcstas import NMXMcStasWorkflow\n",
     "from ess.nmx.data import get_small_mcstas\n",
-    "from ess.nmx.types import *\n",
+    "from ess.nmx.mcstas.types import *\n",
     "\n",
-    "wf = McStasWorkflow()\n",
+    "wf = NMXMcStasWorkflow()\n",
     "# Replace with the path to your own file\n",
     "wf[FilePath] = get_small_mcstas()\n",
     "wf[MaximumCounts] = 10_000\n",
@@ -92,12 +92,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ess.nmx.types import DetectorName\n",
     "from ess.nmx.mcstas.load import (\n",
     "    raw_event_data_chunk_generator,\n",
     "    mcstas_weight_to_probability_scalefactor,\n",
     ")\n",
-    "from ess.nmx.streaming import calculate_number_of_chunks\n",
+    "from ess.nmx.mcstas.streaming import calculate_number_of_chunks\n",
     "from ipywidgets import IntProgress\n",
     "\n",
     "CHUNK_SIZE = 10  # Number of event rows to process at once\n",
@@ -194,7 +193,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ess.nmx.nexus import NXLauetofWriter\n",
+    "from ess.nmx.mcstas.nexus import NXLauetofWriter\n",
     "\n",
     "\n",
     "def temp_generator(file_path, detector_name):\n",
