Update notebook title.

--- a/docs/user-guide/mcstas_workflow.ipynb
+++ b/docs/user-guide/mcstas_workflow.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Workflow\n",
+    "# McStas Workflow\n",
     "In this example, we will use McStas 3 simulation file.\n",
     "\n",
     "## Build Pipeline (Collect Parameters and Providers)\n",
