Fix typos and grammar
Co-authored-by: Neil Vaytet <39047984+nvaytet@users.noreply.github.com>

--- a/docs/user-guide/workflow.ipynb
+++ b/docs/user-guide/workflow.ipynb
@@ -7,7 +7,7 @@
     "# NMX Reduction Workflow\n",
     "\n",
     "> NMX does not expect users to use python interface directly.<br>\n",
-    "This documentation is mostly for istrument data scientists or instrument scientists.<br>"
+    "This documentation is mostly for instrument data scientists or instrument scientists.<br>"
    ]
   },
   {
@@ -37,7 +37,7 @@
     "config = ReductionConfig(\n",
     "    inputs=InputConfig(\n",
     "        input_file=[get_small_nmx_nexus().as_posix()],\n",
-    "        detector_ids=[0, 1, 2],  # Detector index to be reduced in alphabetical order.\n",
+    "        detector_ids=[0, 1, 2],\n",
     "    ),\n",
     "    output=OutputConfig(\n",
     "        output_file=\"scipp_output.hdf\", skip_file_output=False, overwrite=True\n",
@@ -62,14 +62,14 @@
    "source": [
     "## Configuration\n",
     "\n",
-    "`essnmx` provide command line data reduction tool for the reduction between `nexus` and `dials`.<br>\n",
+    "`essnmx` provides a command line data reduction tool.<br>\n",
     "The `essnmx-reduce` interface will reduce `nexus` file <br>\n",
     "and save the results into `NXlauetof`(not exactly but very close) format for `dials`.<br>\n",
     "\n",
     "Argument options could be exhaustive therefore we wrapped them into a nested pydantic model.<br>\n",
-    "Here is a python API you can use to build the configuration and turn it into a command line arguments.\n",
+    "Here is a python API you can use to build the configuration and turn it into command line arguments.\n",
     "\n",
-    "**Configuration object is pydantic model so it strictly check the type of the arguments.**"
+    "**The configuration object is a pydantic model, and it thus enforces strict checks on the types of the arguments.**"
    ]
   },
   {
