Rephrase reason to use pydantic model.

--- a/docs/user-guide/workflow.ipynb
+++ b/docs/user-guide/workflow.ipynb
@@ -66,7 +66,7 @@
     "The `essnmx-reduce` interface will reduce `nexus` file <br>\n",
     "and save the results into `NXlauetof`(not exactly but very close) format for `dials`.<br>\n",
     "\n",
-    "Argument options could be exhaustive therefore we wrapped them into a nested pydantic model.<br>\n",
+    "For conveniences and safety, all configuration options are warpped in a nested pydantic model.<br>\n",
     "Here is a python API you can use to build the configuration and turn it into command line arguments.\n",
     "\n",
     "**The configuration object is a pydantic model, and it thus enforces strict checks on the types of the arguments.**"
