Add benchmark result in the documentation.

--- a/docs/user-guide/workflow.ipynb
+++ b/docs/user-guide/workflow.ipynb
@@ -84,6 +84,7 @@
     "    InputConfig,\n",
     "    WorkflowConfig,\n",
     "    TimeBinCoordinate,\n",
+    "    Compression,\n",
     "    to_command_arguments,\n",
     ")\n",
     "\n",
@@ -142,8 +143,40 @@
    "source": [
     "from ess.nmx.executables import save_results\n",
     "\n",
-    "output_config = OutputConfig(output_file=\"scipp_output.hdf\", overwrite=True)\n",
+    "output_config = OutputConfig(\n",
+    "    output_file=\"scipp_output.hdf\", overwrite=True, compression=Compression.GZIP\n",
+    ")\n",
     "save_results(results=results, output_config=output_config)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Compression Modes\n",
+    "\n",
+    "There are multiple compression modes for `detector counts` data(other datasets are not compressed).<br>\n",
+    "The default mode is `BITSHUFFLE_LZ4` but<br>\n",
+    "note that `bitshuffle` may not be supported in cerntain environments, such as MacOS or Windows.\n",
+    "\n",
+    "It was decided because the first step of the reduction workflow (this workflow)<br>\n",
+    "is expected to be run by ESS in the specific environment that bitshuffle supports.<br>\n",
+    "\n",
+    "Here is the rough benchmark results with the small test dataset.<br>\n",
+    "With the result, users can decide which compression mode to use.\n",
+    "\n",
+    "| Compression Mode | Final Size [MB] | Compression Ratio | Writing Time [s] | Reading Time [s] |\n",
+    "| ---------------- | --------------- |------------------ | ---------------- | ---------------- |\n",
+    "| NONE | 1_966 | 1 | 4 | 1 |\n",
+    "| GZIP | 5 | 370 | 18 | 10 | 5 |\n",
+    "| BITSHUFFLE_LZ4 | 17 | 114 | 10 | 3 |\n",
+    "\n",
+    "> In the ESS standard VISA environment. (64 GB mem/6 VCPUs)\n",
+    "\n",
+    "`BITSHUFFLE_LZ4` showed much faster speed for writing/reading the reduced file.<br>\n",
+    "`GZIP` and `BITSHUFFLE` could both compress the data more than 99% (when the histogram was very empty)<br>\n",
+    "but `GZIP` had 3 times better compression ratio than `BITSHUFFLE` for this particular dataset.<br>\n",
+    "By default speed is prioritized to space."
    ]
   }
  ],
