Add comma [skip ci]

--- a/docs/user-guide/workflow.ipynb
+++ b/docs/user-guide/workflow.ipynb
@@ -176,7 +176,7 @@
     "`BITSHUFFLE_LZ4` showed much faster speed for writing/reading the reduced file.<br>\n",
     "`GZIP` and `BITSHUFFLE` could both compress the data more than 99% (when the histogram was very empty)<br>\n",
     "but `GZIP` had 3 times better compression ratio than `BITSHUFFLE` for this particular dataset.<br>\n",
-    "By default speed is prioritized to space."
+    "By default, speed is prioritized to space."
    ]
   }
  ],
