--- a/docs/user-guide/workflow.ipynb
+++ b/docs/user-guide/workflow.ipynb
@@ -156,11 +156,7 @@
     "## Compression Modes\n",
     "\n",
     "There are multiple compression modes for `detector counts` data(other datasets are not compressed).<br>\n",
-    "The default mode is `BITSHUFFLE_LZ4` but<br>\n",
-    "note that `bitshuffle` may not be supported in cerntain environments, such as MacOS or Windows.\n",
-    "\n",
-    "It was decided because the first step of the reduction workflow (this workflow)<br>\n",
-    "is expected to be run by ESS in the specific environment that bitshuffle supports.<br>\n",
+    "The default mode is `BITSHUFFLE_LZ4`.<br>\n",
     "\n",
     "Here is the rough benchmark results with the small test dataset.<br>\n",
     "With the result, users can decide which compression mode to use.\n",
@@ -168,15 +164,27 @@
     "| Compression Mode | Final Size [MB] | Compression Ratio | Writing Time [s] | Reading Time [s] |\n",
     "| ---------------- | --------------- |------------------ | ---------------- | ---------------- |\n",
     "| NONE | 1_966 | 1 | 4 | 1 |\n",
-    "| GZIP | 5 | 370 | 18 | 10 | 5 |\n",
+    "| GZIP | 5 | 370 | 18 | 5 |\n",
     "| BITSHUFFLE_LZ4 | 17 | 114 | 10 | 3 |\n",
     "\n",
     "> In the ESS standard VISA environment. (64 GB mem/6 VCPUs)\n",
     "\n",
-    "`BITSHUFFLE_LZ4` showed much faster speed for writing/reading the reduced file.<br>\n",
+    "`BITSHUFFLE_LZ4` showed almost twice faster speed for writing/reading the reduced file.<br>\n",
     "`GZIP` and `BITSHUFFLE` could both compress the data more than 99% (when the histogram was very empty)<br>\n",
     "but `GZIP` had 3 times better compression ratio than `BITSHUFFLE` for this particular dataset.<br>\n",
-    "By default, speed is prioritized to space."
+    "\n",
+    ".. note::\n",
+    "Why `BITSHUFFLE` is the default compression mode? -\n",
+    "`Bitshuffle` is compatible with `DIALS` and other crystallography packages.\n",
+    "It is the primary compression mode of all data collected on `DECTRIS EIGER` detectors,\n",
+    "which are the primary detectors used at synchrotron X-ray MX beamlines.\n",
+    "Most of these packages can also read `gzip` data but the slow readout makes `gzip` less attractive than `bitshuffle`.\n",
+    "\n",
+    "\n",
+    ".. warning::\n",
+    "`Bitshuffle` may not be supported in cerntain environments, such as MacOS or Windows.\n",
+    "It was accepted to be default because the first step of the reduction workflow (this workflow)\n",
+    "is expected to be run by ESS in the specific environment that bitshuffle supports."
    ]
   }
  ],
